Fix Header z-index

--- a/assets/css/global/nav.css
+++ b/assets/css/global/nav.css
@@ -26,6 +26,7 @@
   right: 0;
   top: 0;
 	width: 100%;
+  z-index: 100;
 }
 
 .nav {
